started laying out index page

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+  ul li {
+    text-decoration: none;
+    text-indent: 0;
+    list-style-type: 0;
+    padding: 0; }
 
 /*# sourceMappingURL=style.css.map */
