started join us page

--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,10 @@ ul {
     list-style-type: 0;
     padding: 0; }
 
+.test {
+  height: 15vh;
+  background: darkslategrey;
+  width: 15%;
+  margin: auto; }
+
 /*# sourceMappingURL=style.css.map */
