finished join us page html

--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,20 @@ ul {
   width: 15%;
   margin: auto; }
 
+.member__submit--btn {
+  height: 50px;
+  width: 150px;
+  padding: auto;
+  background: #333;
+  display: block; }
+  .member__submit--btn p {
+    color: white;
+    margin: auto; }
+
+.center-verticle {
+  display: flex;
+  align-self: auto;
+  align-items: center;
+  background: red; }
+
 /*# sourceMappingURL=style.css.map */
