--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,3 +1,7 @@
+.active{
+	display: block;
+}
+
 #desktop{
 	background-color: #333;
 	width: 2.5*$col;
@@ -8,6 +12,7 @@
 	top: 5;
 	left: 0;
 	font-family: $emphasisFont;
+	display: none;
 
 	.highlighted{
 	background: orange;
@@ -33,4 +38,20 @@
 			}
 		}	
 	}
+}
+
+
+#mobile{
+	@extend #desktop;
+	width: 8*$col;
+	max-width: 100%;
+	position: absolute;
+}
+
+#hamburger{
+	font-size: 50px;
+	color: red;
+	display: block;
+	float: left;
+	cursor: pointer;
 }
