--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,6 +2,10 @@
 $col: 8.33%;
 $spancol: 100%;
 
+// layout
+$dMar: 4%;
+$dPad: 4%;
+
 // fonts
 $paraFont: 'Lexend Deca', sans-serif;
 $headingFont: 'PT Mono', monospace;
