--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,7 @@
 @import "_resets";
 @import "_variables";
+@import "_type";
 @import "_nav";
+@import "_layout";
+@import "_memberForm";
 @import "_test";
