--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,5 +8,9 @@ $dPad: 4%;
 
 // fonts
 $paraFont: 'Lexend Deca', sans-serif;
-$headingFont: 'PT Mono', monospace;
-$emphasisFont: 'Nunito', sans-serif;
+$headingFont: 'Nunito', sans-serif;
+$emphasisFont: 'PT Mono', monospace;
+
+// colours
+$sectionColor: lightgrey;
+$articleColor: white;
