--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,10 @@
 @import "_resets";
 @import "_variables";
+@import "_mixins";
 @import "_type";
 @import "_nav";
 @import "_layout";
 @import "_memberForm";
 @import "_test";
+
+@import "_mediaQuerries";
