--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -14,3 +14,5 @@ $emphasisFont: 'PT Mono', monospace;
 // colours
 $sectionColor: lightgrey;
 $articleColor: white;
+
+$shadow: 4px 4px 10px #404040;
