--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,22 +6,51 @@ header{
 }
 .section{
 	background: $sectionColor;
+	padding-bottom: 25px;
 
-	.section__article{
-		padding: $dPad;
+	.section__articles{
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: stetch;
+
+		p{
+			margin: 10px 0;
+		}
+		.section__article--text{
+			width: $spancol;
+			padding: $dPad;
+
+			p{
+				padding: 10px 0;
+			}
+		}
+	}
+	.section__image{
+		width: $spancol;
+		display: block;
+		float: left;
+		margin: 10px 0;
+
+		img{
+			width: $spancol;
+			display: block;
+			margin: auto;
+		}
 	}
 }
 
 
 // Generic buttons
-.btn-link{
+.btn__link{
 	width: 8*$col;
 	padding: 15px 5px;
 	background: #333;
 	display: block;
 	cursor: pointer;
 	border-radius: 15px;
-	margin: 10px auto;
+	margin: 10px auto 0 auto;
 	p{
 		color: white;
 		margin: auto;
@@ -29,66 +58,7 @@ header{
 		font-family: $emphasisFont;
 	}
 }
-.btn-link:hover{
+.btn__link:hover{
 	background: red;
 	color: blue;
-}
-
-.section__articles{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-
-	.article__container{
-		background: white;
-		width: 10*$col;
-		margin: 10px auto;
-		border: 2px solid black;
-		border-radius: 8px;
-
-		.article__container--btn{
-			width: 2*$col;
-			float: left;
-			border-top: 2px solid black;
-
-			.article__btn{
-				margin-top: 30px;
-				padding: 5px;
-				background-color: black;
-				display: block;
-				text-align: center;
-				margin-right: 5px;
-				border-radius: 8px;
-
-				p{
-					font-family: $emphasisFont;
-					color: white;
-					margin: 0;
-				}
-			}
-			.article__btn:hover{
-				background: grey;
-
-				p{
-					color: #333;
-				}
-			}
-		}
-		.article__container--text{
-			padding: 0.5*$dPad;
-			width: 10*$col;
-			float: left;
-			border-top: 2px solid black;
-			
-			p{
-				margin: 0;
-			}
-		}
-		p{
-			margin: 10px;
-		}
-	}
-	p{
-	margin: 10px 0;
-	}
 }
