--- a/sass/_mediaQuerries.scss
+++ b/sass/_mediaQuerries.scss
@@ -9,6 +9,19 @@
 			font-size: 2.5em;
 		}
 	}
+	.member__block{
+		width: 6*$col;
+		padding: 10px auto;
+		margin: auto;
+
+		.btn__payment{
+			width: $spancol;
+			margin: 8px auto;
+		}
+		.member__submit--btn{
+			margin: 0 auto;
+		}
+	}
 }
 
 // Desktop Mode
