--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,8 @@
 @import "_nav";
 @import "_layout";
 @import "_memberForm";
+@import "_articles";
+@import "_articleImages";
 @import "_test";
 
 @import "_mediaQuerries";
