--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,17 +6,19 @@ header{
 }
 .section{
 	background: $sectionColor;
-	padding-bottom: 25px;
+	padding: 0 $dPad 25px $dPad;
 
 	.section__articles{
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: space-between;
-		align-items: stetch;
+		align-items: flex-start;
+		align-content: stretch;
 
 		p{
 			margin: 10px 0;
+			padding: 0 $dPad;
 		}
 		.section__article--text{
 			width: $spancol;
@@ -24,6 +26,7 @@ header{
 
 			p{
 				padding: 10px 0;
+				margin: 0 $dPad;
 			}
 		}
 	}
@@ -50,7 +53,7 @@ header{
 	display: block;
 	cursor: pointer;
 	border-radius: 15px;
-	margin: 10px auto 0 auto;
+	margin: 10px auto 10px auto;
 	p{
 		color: white;
 		margin: auto;
