--- a/sass/_mediaQuerries.scss
+++ b/sass/_mediaQuerries.scss
@@ -8,18 +8,21 @@
 		h1{
 			font-size: 2.5em;
 		}
-	}
-	.member__block{
-		width: 6*$col;
-		padding: 10px auto;
-		margin: auto;
+		.member__block{
+			width: 6*$col;
+			margin: auto;
 
-		.btn__payment{
-			width: $spancol;
-			margin: 8px auto;
-		}
-		.member__submit--btn{
-			margin: 0 auto;
+			.btn__payment{
+				width: $spancol;
+				float: none;
+				// margin: 8px auto;
+			}
+			.member__submit--btn{
+				margin: 0 auto;
+			}
+			.member__image{
+				width: 6*$col;
+			}
 		}
 	}
 }
